--- a/views/recipes/index.jade
+++ b/views/recipes/index.jade
@@ -2,16 +2,11 @@ doctype html
 html(lang="en")
 head
 
-body.container-fluid
+body
   header
 
   main
     div
       h3
-        | Recipes:
-        script.
-          recipes.forEach(function(recipe)
-        h4
-          My recipes:
-footer
+        My Recipes:
 
