About, Index pages updated. Created footer partial and updated layout.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,13 @@
 doctype html
-html
+html(lang="en")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header
+      include partials/_header
+    main
     block content
+    footer
+      include partials/_footer
+
