--- a/views/login.jade
+++ b/views/login.jade
@@ -1,21 +1,16 @@
-doctype html
-htm(lang="en")
-  head
+extends layout
 
-  body
-    header
-      include partials/_header
-    main
+block content
+  div
+    h2 Login
+    form(method="post", action="/login")
       div
-        h2 Login
-        form(method="post", action="/login")
-          div
-            input(type="text", name="email", id="email")
-            label(for="email") Email
-          div
-            input(type="password", name="password", id="password")
-            label(for="email") Password
-            input(type="submit")
-    footer
+        input(type="text", name="email", id="email")
+        label(for="email") Email
+      div
+        input(type="password", name="password", id="password")
+        label(for="email") Password
+        input(type="submit")
+
 
 
