--- a/views/index.jade
+++ b/views/index.jade
@@ -5,4 +5,5 @@ block content
       h1 Vittles & Drank
       a(href="/signup") Sign Up
       a(href="/signup") Login
+      a(href="/users/show") My Profile
 
