completed basic rendering of recipe show page

--- a/views/recipes/show.jade
+++ b/views/recipes/show.jade
@@ -1,12 +1,5 @@
-doctype html
-html(lang="en")
-head
+//- extends layout
 
-body
-  header
-
-  main
-    div
-      h3
-        My Recipe: #{recipe}
-
+div
+  p FOOD: #{recipe.food}
+  p DRANK: #{recipe.drank}
