added functionality to router to show an array of recipes created by the currently logged on user.

--- a/views/recipes/index.jade
+++ b/views/recipes/index.jade
@@ -4,10 +4,8 @@
 
 main
   div
-    h3
-      | My Recipes:
-      script.
-        #{recipe}
+    h3 INDEX. My Recipes: #{recipes}
+    h3 recipes.food #{recipes.food}
 
   //-      recipeName: String,
   //- lorem: String,
@@ -16,4 +14,5 @@ main
   //- food: String,
   //- snack: String,
   //- cookingMethod: String,
+
 
