Updated show recipes link in users/show.

--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -5,7 +5,7 @@ block content
   h3 User Dashboard
 
   a(href="/recipes/new") Find Recipe
-  a(href="/recipes/show") My Recipes
+  a(href="/recipes") My Recipes
   a(href="/users/edit") Edit Profile
 
 
