Added base bootstrap cdn files to jade template.

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,6 @@ extends layout
 block content
     div
       h1 Vittles & Drank
-      a(href="/signup") Sign Up
-      a(href="/signup") Login
-      a(href="/users/show") My Profile
+      a(class="btn btn-default" href="/signup") Sign Up
+      a(class="btn btn-default" href="/signup") Login
 
