Added container-fluid to jade template.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html(lang="en")
   body
     header
       include partials/_header
-    main
+    .container-fluid
     block content
     footer
       include partials/_footer
