--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,49 @@
-extends layout
-
-block content
-    div
-      h1 About Vittles and Drank
-      p V & P is all about bringing Southern culture to the mass populace in a fun and accessible way.
-
+doctype html
+html(lang="en")
+  head
+    title= title
+    meta( http-equiv='X-UA-Compatible', content='IE=edge' )
+    meta( name='viewport', content='width=device-width, initial-scale=1.0' )
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/katie.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
+  body#about
+    header
+      include partials/_header
+    .container-fluid
+      div
+        h1.text-center Vittles & Drink
+        p.text-center#summary Welcome to Vittles & Drink. VP is all about bringing Southern culture to the mass populace in a fun and accessible way.
+      .row#tech
+        h3.text-center Technologies Used:
+        ul.text-center
+          li HTML5
+          li CSS3
+          li Bootstrap 3
+          li Node.js
+          li Express.js
+          li jQuery
+          li Mongoose
+          li Mongo
+          li Passport
+      .row
+        h3.text-center The Creators:
+        .col-md-4.col-xs-12
+          .wrap.text-center
+            img(src="http://fillmurray.com/200/300")
+            p.title Katie Owen
+            p.description Katie likes to write all the code.
+        .col-md-4.col-xs-12
+          .wrap.text-center
+            img(src="http://fillmurray.com/200/300")
+            p.title Anthony Sims
+            p.description Anthony likes to write all the code.
+        .col-md-4.col-xs-12
+          .wrap.text-center
+            img(src="http://fillmurray.com/200/300")
+            p.title Steven Bell
+            p.description Steven likes to write all the code.
+      footer
+        include partials/_footer
