--- a/views/recipes/index.jade
+++ b/views/recipes/index.jade
@@ -1,9 +1,25 @@
-extend ../layout
-
-block content
-
-  main
+doctype html
+html(lang="en")#userRecipes
+  head
+    title= title
+    meta( http-equiv='X-UA-Compatible', content='IE=edge' )
+    meta( name='viewport', content='width=device-width, initial-scale=1.0' )
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/katie.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
+  body
+    header
+      include ../partials/_header
+    .container-fluid
     - var entries = recipes
-    div
+    h1.text-center Saved Entries:
+    .row
       each value, index in entries
-        p= index+1 + ". " + "vittles: " + value.food + "  potion: " + value.drank
+        .col-md-4.col-xs-12.text-center
+          .card
+            h2= value.food + " & " + value.drank
+            //p= index+1 + ". " + "vittles: " + value.food + "  potion: " + value.drank
+    footer
+      include ../partials/_footer
