--- a/views/login.jade
+++ b/views/login.jade
@@ -4,13 +4,16 @@ block content
   div
     h2 Login
     form(method="post", action="/login")
-      div
-        input(type="text", name="email", id="email")
-        label(for="email") Email
-      div
-        input(type="password", name="password", id="password")
-        label(for="email") Password
-        input(type="submit")
-
-
-
+      .form-group.row
+        .col-md-2
+          label(for="email") Email
+        .col-md-4
+          input.form-control(type="text", name="email", id="email")
+      .form-group.row    
+        .col-md-2
+          label(for="email") Password
+        .col-md-4
+          input.form-control(type="password", name="password", id="password")
+      .form-group.row    
+        .col-md-4.col-md-offset-2
+          input.btn.btn-block.btn-success(type="submit")
