--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,11 +4,16 @@ block content
   div
     h2 Signup
     form(method="post" action="/signup")
-      div.form-group
-        label(for="email") Email
-        input.form-control(type="text", name="email", id="email")
-      div.form-group
-        label(for="email") Password
-        input.form-control(type="password", name="password", id="password")
-      input.btn.btn-default(type="submit")
-
+      .form-group.row
+        .col-md-2
+          label(for="email") Email
+        .col-md-4
+          input.form-control(type="text", name="email", id="email")
+      .form-group.row    
+        .col-md-2
+          label(for="email") Password
+        .col-md-4
+          input.form-control(type="password", name="password", id="password")
+      .form-group.row    
+        .col-md-4.col-md-offset-2
+          input.btn.btn-block.btn-success(type="submit")
