--- a/public/stylesheets/katie.css
+++ b/public/stylesheets/katie.css
@@ -48,4 +48,26 @@
   color: #fff;
 }
 
+.navbar-default {
+  background-color: #000;
+  color: #fff;
+}
+
+.navbar-default .navbar-brand, .navbar-default .navbar-nav>li>a {
+  color: #fff;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #ccc;
+}
+
+footer {
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
