--- a/public/stylesheets/katie.css
+++ b/public/stylesheets/katie.css
@@ -23,11 +23,11 @@
 }
 
 #userRecipes {
-  background: url('../bgAllRecipes.jpg');
+/*  background: url('../bgAllRecipes.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100%;*/
 }
 
 #userRecipes body {
@@ -36,11 +36,12 @@
 
 #userRecipes .card {
   /*background-color: rgba(255, 255, 255, 0.7);*/
-  background-color: #fff;
+  background-color: #f1f1f1;
   margin: 0 auto;
   color: #000;
   height: 40vh;
   padding-top: 10vh;
+  border: 1px solid #000;
 }
 
 #userRecipes h1 {
@@ -57,8 +58,16 @@
   color: #fff;
 }
 
-.navbar-default .navbar-brand:hover {
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:active {
   color: #ccc;
+}
+
+.navbar-default .navbar-toggle {
+  color: #fff;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  color: #fff;
 }
 
 footer {
