--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -8,7 +8,7 @@ block content
     .col-md-4.col-xs-12
       a(class="btn btn-default" href="/recipes") My Recipes
     .col-md-4.col-xs-12
-      a(class="btn btn-default" href="/users/edit") Edit Profile
+      a(class="btn btn-default" href="/users/:id/edit") Edit Profile
 
 
 
