refactored recipe model to pairing model

--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -1,12 +1,9 @@
-extend ../layout
+extends ../layout
 
 block content
-  h2 Vittles & Drank
+  h2 Vittles & Drinks
   h3 User Dashboard
 
-  a(href="/recipes/new") Find Recipe
-  a(href="/recipes") My Recipes
+  a(href="/pairings/new") Find a Pairing
+  a(href="/pairings") My Pairings
   a(href="/users/edit") Edit Profile
-
-
-
