--- a/views/partials/_header.jade
+++ b/views/partials/_header.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a(class="navbar-brand" href="/") Vittles & Drink
+      a(class="navbar-brand" href="/") Vittles & Drinks
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     #navbar-collapse.collapse.navbar-collapse
