--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -3,17 +3,17 @@ extends ../layout
 block content
   div
     h2 Edit User Profile
-    form(method="post", action="/login")
+    form(method="post", action="/edit")
       .form-group.row
         .col-md-2
           label(for="email") Email
         .col-md-4
           input.form-control(type="text", name="email", id="email")
-      .form-group.row    
+      .form-group.row
         .col-md-2
           label(for="email") Password
         .col-md-4
           input.form-control(type="password", name="password", id="password")
-      .form-group.row    
+      .form-group.row
         .col-md-4.col-md-offset-2
           input.btn.btn-block.btn-success(type="submit")
