Working on styling. Update pairing is working. Working on delete functionality.

--- a/views/pairings/index-alt.jade
+++ b/views/pairings/index-alt.jade
@@ -13,13 +13,29 @@ html(lang="en")#userRecipes
     header
       include ../partials/_header
     .container-fluid
-    - var entries = pairings
-    h1.text-center Saved Pairings:
-    .row
-      each value, index in pairings
-        .col-md-4.col-xs-12.text-center
-          .card
-            h2= value.food + " & " + value.drink
-            //p= index+1 + ". " + "vittles: " + value.food + "  potion: " + value.drank
+      - var entries = pairings
+      h1.text-center Saved Pairings:
+      .row
+        each value, index in pairings
+          .col-md-4.col-xs-12.text-center
+            .card
+              h2= value.food + " & " + value.drink
+              ul
+                li
+                  a(href="pairings/" + value._id + "/edit") Edit
+                li
+                  a(href="pairings/" + value._id) View
+                li
+                  //a(href="pairings/" + value._id) Delete
+                  form(method="POST", action="/pairings/" + value._id + "?_method=DELETE")
+                    a(href="/pairings/" + value._id) Delete
+                    button(type="submit")
+              //p= index+1 + ". " + "vittles: " + value.food + "  potion: " + value.drank
+          .col-md-4.col-xs-12.text-center
+            .card
+              h2= value.food + " & " + value.drink
+          .col-md-4.col-xs-12.text-center
+            .card
+              h2= value.food + " & " + value.drink
     footer
       include ../partials/_footer
