--- a/views/partials/_header.jade
+++ b/views/partials/_header.jade
@@ -19,9 +19,10 @@ nav.navbar.navbar-default.navbar-fixed-top
         li
           a(href="/about") About
         -if (global.currentUser) {
-          //li #{global.currentUser.local.email}
           li
-            a(href="/users/show") Profile
+            a(href="/users/" + global.currentUser.id + "/edit") #{global.currentUser.local.email}
+          li
+            a(href="/users/" + global.currentUser.id) Profile
           li
             a(href="/logout") Logout
         -}
