--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -8,4 +8,4 @@ block content
     .col-md-4.col-xs-12
       a(class="btn btn-default" href="/pairings") My Pairings
     .col-md-4.col-xs-12
-      a(class="btn btn-default" href="/users/:id/edit") Edit Profile
+      a(class="btn btn-default" href="/users/" + global.currentUser.id + "/edit") Edit Profile
