Updated nav and user dashboard to remove edit user functionality.

--- a/views/partials/_header.jade
+++ b/views/partials/_header.jade
@@ -19,8 +19,8 @@ nav.navbar.navbar-default.navbar-fixed-top
         li
           a(href="/about") About
         -if (global.currentUser) {
-          li
-            a(href="/users/" + global.currentUser.id + "/edit") #{global.currentUser.local.email}
+          //li
+            //a(href="/users/" + global.currentUser.id + "/edit") #{global.currentUser.local.email}
           li
             a(href="/users/" + global.currentUser.id) Profile
           li
