--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -3,9 +3,9 @@ extends ../layout
 block content
   h1#user-profile.text-center Vittles & Drinks User Profile:
   .row.text-center
-    .col-md-4.col-xs-12
+    .col-md-6.col-xs-12
       a(class="btn btn-default" href="/pairings/new") Find Pairing
-    .col-md-4.col-xs-12
+    .col-md-6.col-xs-12
       a(class="btn btn-default" href="/pairings") My Pairings
-    .col-md-4.col-xs-12
-      a(class="btn btn-default" href="/users/" + global.currentUser.id + "/edit") Edit Profile
+    //.col-md-4.col-xs-12
+      //a(class="btn btn-default" href="/users/" + global.currentUser.id + "/edit") Edit Profile
