--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -1,11 +1,22 @@
 extends ../layout
 
 block content
-  h1#user-profile.text-center Vittles & Drinks User Profile:
+  h1#user-profile.text-center User Dashboard
   .row.text-center
-    .col-md-6.col-xs-12
-      a(class="btn btn-default" href="/pairings/new") Find Pairing
-    .col-md-6.col-xs-12
-      a(class="btn btn-default" href="/pairings") My Pairings
+    .col-md-4.col-md-offset-2.col-xs-12.text-center
+      .card
+        .img-wrapper
+          img(src="../img/lunch.jpg")
+        a(class="user-icon" href="/pairings/new") Find Pairing
+    .col-md-4.col-xs-12.text-center
+      .card
+        .img-wrapper
+          img(src="../img/spirits.jpg")
+        a(class="user-icon" href="/pairings") My Pairings
+
+    //.col-md-6.col-xs-12
+      //a(class="btn btn-default" href="/pairings/new") Find Pairing
+    //.col-md-6.col-xs-12
+      //a(class="btn btn-default" href="/pairings") My Pairings
     //.col-md-4.col-xs-12
       //a(class="btn btn-default" href="/users/" + global.currentUser.id + "/edit") Edit Profile
