--- a/views/about.jade
+++ b/views/about.jade
@@ -30,37 +30,37 @@ html(lang="en")
           li Mongo
           li Passport
           li Jade
-
+    .container-fluid.text-center#iconContainer
         .row#icons
-          .col-xs-4.col-lg-1.col-lg-offset-1#html5
-          .col-xs-4#css3
-          .col-xs-4#bootstrap
-          .col-xs-4#node
-          .col-xs-4#jquery
-          .col-xs-4#ex
-          .col-xs-4#mongo
-          .col-xs-4#mongoose
-          .col-xs-4#passport
-          .col-xs-4#jade
-
-
-      .row
-        h3.text-center The Creators:
-        .col-md-4.col-xs-12
-          .wrap.text-center
-            img(src="./img/KatieSlice.png")
-            p.title Katie Owen
-            p.description Katie Owen is a full-stack web developer from Atlanta. When she’s not coding, she’s exploring Atlanta on foot or by bike.
-        .col-md-4.col-xs-12
-          .wrap.text-center
-            img(src="./img/Anthony_Slice.png")
-            p.title Anthony Sims
-            p.description Anthony Sims Jr. is a full-stack web dev and filmmaker. He lives with his wife and two dogs in Chattanooga, TN.
-        .col-md-4.col-xs-12
-          .wrap.text-center
-            img(src="./img/StevenSlice.png")
-            p.title Steven Bell
-            p.description Steven Bell is an Atlanta based entrepreneur and Landscape Architect turned full stack Web Developer.
+            .col-xs-4.col-lg-1.col-lg-offset-1#html5
+            .col-xs-4#css3
+            .col-xs-4#bootstrap
+            .col-xs-4#node
+            .col-xs-4#jquery
+            .col-xs-4#ex
+            .col-xs-4#mongo
+            .col-xs-4#mongoose
+            .col-xs-4#passport
+            .col-xs-4#jade
+    .row#spaceHolder
+    hr
+    .row
+      h3.text-center The Creators:
+      .col-md-4.col-xs-12
+        .wrap.text-center
+          img(src="./img/KatieSlice.png")
+          p.title Katie Owen
+          p.description Katie Owen is a full-stack web developer from Atlanta. When she’s not coding, she’s exploring Atlanta on foot or by bike.
+      .col-md-4.col-xs-12
+        .wrap.text-center
+          img(src="./img/Anthony_Slice.png")
+          p.title Anthony Sims
+          p.description Anthony Sims Jr. is a full-stack web dev and filmmaker. He lives with his wife and two dogs in Chattanooga, TN.
+      .col-md-4.col-xs-12
+        .wrap.text-center
+          img(src="./img/StevenSlice.png")
+          p.title Steven Bell
+          p.description Steven Bell is an Atlanta based entrepreneur and Landscape Architect turned full stack Web Developer.
       footer
         include partials/_footer
 
