--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 50px 0;
-  font: 14px "Lato", Helvetica, Arial, sans-serif;
+  font: 14px "Lato", Helvetica, sans-serif;
 }
 
 a {
