--- a/views/pairings/new.jade
+++ b/views/pairings/new.jade
@@ -1,25 +1,26 @@
 extends ../layout
 
 block content
-  div
-    h2 Choose Vittles and a Drink
-    form(method="post", action="/pairings")
-      .form-group.row
-        .col-md-2
-          label(for="food") Vittles
-        .col-md-4
-          select.form-control(id="food", name="food")
-            option(value='breakfast') BREAKFAST
-            option(value='lunch') LUNCH
-            option(value= 'supper') DINNER
-      .form-group.row
-        .col-md-2
-          label(for="drink") Drink
-        .col-md-4
-          select.form-control(id="drink", name="drink")
-            option(value= 'iced tea') HOT
-            option(value= 'coke') COLD
-            option(value= 'coldbeer') SPIRITS
-      .form-group.row
-        .col-md-4.col-md-offset-2
-          input.btn.btn-block.btn-primary(type="submit")
+  .row
+    .col-md-6.col-md-offset-3
+      h2.form-header Choose Vittles and a Drink
+      form(method="post", action="/pairings")
+        .form-group.row
+          .col-md-3
+            label(for="food") Vittles
+          .col-md-6
+            select.form-control(id="food", name="food")
+              option(value='breakfast') BREAKFAST
+              option(value='lunch') LUNCH
+              option(value= 'supper') DINNER
+        .form-group.row
+          .col-md-3
+            label(for="drink") Drink
+          .col-md-6
+            select.form-control(id="drink", name="drink")
+              option(value= 'coffee') HOT
+              option(value= 'iced tea') COLD
+              option(value= 'bourbon') SPIRITS
+        .form-group.row
+          .col-md-6.col-md-offset-3
+            input.btn.btn-block.btn-default(type="submit")
