--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,19 +1,20 @@
 extends layout
 
 block content
-  div
-    h2 Signup
-    form(method="post" action="/signup")
-      .form-group.row
-        .col-md-2
-          label(for="email") Email
-        .col-md-4
-          input.form-control(type="text", name="email", id="email")
-      .form-group.row
-        .col-md-2
-          label(for="email") Password
-        .col-md-4
-          input.form-control(type="password", name="password", id="password")
-      .form-group.row
-        .col-md-4.col-md-offset-2
-          input.btn.btn-block.btn-success(type="submit")
+  .row
+    .col-md-6.col-md-offset-3
+      h2.form-header Sign Up
+      form(method="post" action="/signup")
+        .form-group.row
+          .col-md-3
+            label(for="email") Email
+          .col-md-6
+            input.form-control(type="text", name="email", id="email")
+        .form-group.row
+          .col-md-3
+            label(for="email") Password
+          .col-md-6
+            input.form-control(type="password", name="password", id="password")
+        .form-group.row
+          .col-md-6.col-md-offset-3
+            input.btn.btn-block.btn-default(type="submit")
