updated form styling

--- a/views/pairings/new.jade
+++ b/views/pairings/new.jade
@@ -10,17 +10,17 @@ block content
             label(for="food") Vittles
           .col-md-6
             select.form-control(id="food", name="food")
-              option(value='breakfast') BREAKFAST
-              option(value='lunch') LUNCH
-              option(value= 'supper') DINNER
+              option(value='bacon hash and mustard greens') BREAKFAST
+              option(value='pimento cheese on rye') LUNCH
+              option(value= 'jalapeno chicken and dumplins') DINNER
         .form-group.row
           .col-md-3
             label(for="drink") Drink
           .col-md-6
             select.form-control(id="drink", name="drink")
-              option(value= 'coffee') HOT
-              option(value= 'iced tea') COLD
-              option(value= 'bourbon') SPIRITS
+              option(value= 'hot toddy') HOT
+              option(value= 'royal crown cola') COLD
+              option(value= 'sweet tea vodka') SPIRITS
         .form-group.row
           .col-md-6.col-md-offset-3
             input.btn.btn-block.btn-default(type="submit")
