added logo to nav bar to replace plain text.  is responsive across all screen sizes

--- a/views/partials/_header.jade
+++ b/views/partials/_header.jade
@@ -7,7 +7,8 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a(class="navbar-brand" href="/") Vittles & Drinks
+      a(class="navbar-brand" href="/")#navImage
+
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     #navbar-collapse.collapse.navbar-collapse
