fixed bottom margin of nav logo to make logo centered.'

--- a/public/stylesheets/katie.css
+++ b/public/stylesheets/katie.css
@@ -255,5 +255,5 @@ footer {
   width: 280px;
   background-repeat: no-repeat;
   background-size: contain;
-  margin: 10px 0 auto 10%;
+  margin: 5% 0  0 10%;
 }
