--- a/views/pairings/new.jade
+++ b/views/pairings/new.jade
@@ -10,7 +10,7 @@ block content
             label(for="food") Vittles
           .col-md-6
             select.form-control(id="food", name="food")
-              option(value='bacon hash and mustard greens') BREAKFAST
+              option(value='sunnyside eggs with kale') BREAKFAST
               option(value='pimento cheese on rye') LUNCH
               option(value= 'jalapeno chicken and dumplins') DINNER
         .form-group.row
