--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,14 @@ body {
 a {
   color: #00B7FF;
 }
+.btn {
+	border-radius: 0;
+  color: white;
+}
+
+.btn-default {
+	background-color: #000;
+}
+.btn:focus {
+  outline: none;
+}
