--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,8 @@ html(lang="en")
     link(href='https://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet')
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/katie.css')
+    link(rel='stylesheet', href='/stylesheets/showRecipe.css')
+    link(rel='stylesheet', href='/stylesheets/katie.css')
     link(rel='stylesheet', href='/stylesheets/turbo-cobra.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
